<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PreferencesFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:elevation="0dp"
            app:title="@string/preferences_fragment_profile_fragment_toolbar_title"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/features_not_yet_available_salute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/preferences_fragment_features_not_yet_available_salute_text"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/features_not_yet_available_introduction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/greyText"
        android:text="@string/preferences_fragment_features_not_yet_available_introduction_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
         />
    <TextView
        android:id="@+id/features_not_yet_available_apologize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/greyText"
        android:text="@string/preferences_fragment_features_not_yet_available_apologize_text"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />

    <TextView
        android:id="@+id/features_not_yet_available_conclusion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/greyText"
        android:text="@string/preferences_fragment_features_not_yet_available_conclusion_text"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />

</LinearLayout>