<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_setting_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:background="@color/white"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".AddSettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_setting_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:elevation="0dp"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"

        android:layout_marginEnd="16dp"
        android:background="@drawable/setting_title_edit_text"
        android:hint="@string/add_setting_edit_text_setting_title"

        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@color/darkerGrey"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <!--Ask for Max Num Text View-->
    <SeekBar
        android:id="@+id/seek_bar"
        style="@style/Base.Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:max="36"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/max_number_text" />

    <Button
        android:id="@+id/add_items_btn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="0dp"
        android:text="@string/_btn"
        android:textColor="@color/darkerGrey"
        android:textSize="18dp"
        android:textStyle="bold"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar"
        app:strokeColor="@color/darkerGrey"
        app:strokeWidth="9dp" />

    <TextView
        android:id="@+id/max_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="0"
        android:textColor="@color/darkerGrey"
        android:textSize="18dp"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_title" />


    <!--Maximum Number Text Views-->


    <!--Choose Max Num SeekBar - Should disappear on click -->


    <!--Add Item List Button - Should disappear on click-->


    <!--Views Appear after button click-->
    <!--Max Num TextView With Items-->

    <TextView
        android:id="@+id/items_max_num_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:elevation="2dp"
        android:outlineProvider="none"
        android:text="@string/add_setting_text_view_items_number_title"
        android:textColor="@color/grey"
        android:textSize="24sp"

        android:visibility="invisible"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_title" />


    <TextView
        android:id="@+id/max_number_text_with_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:elevation="4dp"

        android:text="@string/max_num_default_value"
        android:textColor="@color/colorAccent"
        android:textSize="24dp"
        android:visibility="invisible"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintStart_toEndOf="@+id/items_max_num_title_text_view"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_title" />
    <!--Add Item Button-->
    <ImageButton
        android:id="@+id/delete_item_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/lighterGrey"

        android:elevation="2dp"
        android:outlineProvider="none"
        android:visibility="invisible"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_title"
        app:srcCompat="@drawable/ic_cancel_red" />

    <ImageView
        android:id="@+id/item_list_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:elevation="0dp"
        android:scaleType="fitXY"
        android:visibility="invisible"

        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/item_list_recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_title"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/add_item_list_background" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_list_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"

        android:layout_marginBottom="8dp"
        android:elevation="0dp"
        android:visibility="invisible"
        android:windowSoftInputMode="adjustResize"

        app:layout_constraintBottom_toTopOf="@+id/item_edit_text_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/items_max_num_title_text_view"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_list_item">


    </androidx.recyclerview.widget.RecyclerView>

    <ImageButton
        android:id="@+id/add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/lightGrey"
        android:elevation="6dp"
        android:outlineProvider="none"
        android:visibility="invisible"

        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/item_edit_text_background"
        app:srcCompat="@drawable/ic_add_dark" />

    <!--Add Item String Edit Text-->
    <EditText
        android:id="@+id/edit_text_item_string"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/item_title_edit_text_background"
        android:elevation="6dp"


        android:hint="@string/add_item_hint"

        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:visibility="invisible"
        android:windowSoftInputMode="adjustNothing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_item"
        app:layout_constraintTop_toTopOf="@+id/item_edit_text_background" />

    <!--Delete Items List Button-->

    <View
        android:id="@+id/item_edit_text_shadow"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/item_edit_text_background"

        android:angle="90"
        android:background="@drawable/shadow"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/shadow_top_guideline" />

    <ImageView
        android:id="@+id/item_edit_text_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:elevation="4dp"
        android:scaleType="fitXY"
        android:visibility="invisible"
        android:windowSoftInputMode="adjustNothing"

        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/add_item"
        app:srcCompat="@drawable/add_item_edit_text_layout" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/shadow_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="98dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_end="98dp" />


</androidx.constraintlayout.widget.ConstraintLayout>